force-app/main/default/objects/Promotion_Configuration__mdt/fields/Child_Opportunity_RecordType_DevName__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunity_RecordType_DevName__c</fullName>
    <label>Child Opportunity RecordType DevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>