force-app/main/default/objects/Promotion_Configuration__mdt/fields/Free_PGT_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Free_PGT_Book_Name__c</fullName>
    <label>Free PGT Book Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>