force-app/main/default/objects/Promotion_Configuration__mdt/fields/PGT_Book_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PGT_Book_Line_Item__c</fullName>
    <label>PGT Book Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>