force-app/main/default/objects/Promotion_Configuration__mdt/fields/PGT_Kit_line_item__c.field-meta.xml
<CustomField>
    <fullName>PGT_Kit_line_item__c</fullName>
    <label>PGT Kit line item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>