force-app/main/default/objects/Promotion_Configuration__mdt/fields/Promotion_Price__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Price__c</fullName>
    <label>Promotion Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>